--- a/src/main/webapp/components/Fieldset.less
+++ b/src/main/webapp/components/Fieldset.less
@@ -129,6 +129,11 @@ fieldset
 				   padding: 4px;
 				   line-height: 16px; }
 
+			> input[type="RADIO"],
+			> input [type="CHECKBOX"] { width: 32px;
+						    height: 32px;
+						    flex-grow: 0; }
+
 			> a,
 			> button
 			{
